--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<title>Yoneda Consulting</title>
+
+	<link rel="stylesheet" href="stylesheet.css">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
+
 </head>
 <body>
 	<h1>Yoneda<h2>
-		
+
 </body>
 </html>
