--- a/index.html
+++ b/index.html
@@ -10,9 +10,31 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
 
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
 	<h1>Yoneda<h2>
+
+	<div class="services">
+		<p>
+		Wir helfen Ihnen Ihr Unternehmen technologisch voran zu treiben und begleiten Sie vom Konzept bis zur Realisierung. 
+		Die Arbeit mit unseren Kunden ist ein von Transparenz, Effizient und Ehrlichkeit geprägter Prozess.
+
+		Die Unternehmenskultur von Yoneda fußt auf einer anthropozentrischen Philosophie die es unseren Mitarbeitern ermöglicht, ein ausgeglichenes Leben zu führen, in dem die innere Entwicklung und das Persönliche vor der Arbeit kommt. Dieser Ansatz mag kontraproduktiv erscheinen, führt jedoch zu einer allgemein höheren Performanz von Yoneda gegenüber herkömmlichen Beratungsfirmen.
+
+		Wir sind keine Generalisten, sondern hochgradig spezialisiert, weshalb wir Ihnen nicht in allen Belangen kompetent zur Seite stehen können, jedoch auf unseren Wissensgebieten einen erheblichen Vorsprung erarbeiten werden.
+
+
+		</br>
+		</br>
+		Unsere Leistungen umfassen:
+
+
+		</p>
+	</div>
 
 </body>
 </html>
