--- a/index.html
+++ b/index.html
@@ -18,22 +18,34 @@
 <body>
 	<h1>Yoneda<h2>
 
-	<div class="services">
+	<div class="about">
+		<h2>Über Yoneda</h2>
 		<p>
-		Wir helfen Ihnen Ihr Unternehmen technologisch voran zu treiben und begleiten Sie vom Konzept bis zur Realisierung. 
-		Die Arbeit mit unseren Kunden ist ein von Transparenz, Effizient und Ehrlichkeit geprägter Prozess.
+		Yoneda hilft Ihnen dabei, Ihr Unternehmen technologisch voran zu treiben und begleitet Sie vom Konzept bis zur Realisierung. 
+		Die Arbeit mit unseren Kunden ist ein von Transparenz, Effizient und Ehrlichkeit geprägter Prozess dessen ganzheitlicher Kontext so wichtig für uns ist wie die unmittelbar sichtbaren Resultate.
 
-		Die Unternehmenskultur von Yoneda fußt auf einer anthropozentrischen Philosophie die es unseren Mitarbeitern ermöglicht, ein ausgeglichenes Leben zu führen, in dem die innere Entwicklung und das Persönliche vor der Arbeit kommt. Dieser Ansatz mag kontraproduktiv erscheinen, führt jedoch zu einer allgemein höheren Performanz von Yoneda gegenüber herkömmlichen Beratungsfirmen.
+		Das Selbstverständnis und die Unternehmenskultur von Yoneda fußen auf einer anthropozentrischen Philosophie die es unseren Mitarbeitern ermöglicht, ein ausgeglichenes Leben zu führen, in dem die innere Entwicklung, das Persönliche und Private vor der Arbeit kommt die lediglich das Individuum vervollständigt aber nicht maßgeblich bestimmt. Dieser Ansatz mag Skepsis hervorrufen, führt jedoch zu einer allgemein höheren Performanz von Yoneda gegenüber herkömmlichen Beratungsfirmen.
 
-		Wir sind keine Generalisten, sondern hochgradig spezialisiert, weshalb wir Ihnen nicht in allen Belangen kompetent zur Seite stehen können, jedoch auf unseren Wissensgebieten einen erheblichen Vorsprung erarbeiten werden.
+		Wir sind keine Generalisten, sondern hochgradig spezialisiert, weshalb wir Ihnen nicht in allen Belangen kompetent zur Seite stehen können, jedoch auf unseren Wissensgebieten einen erheblichen Vorsprung erarbeiten und damit einen selten gewordenen Service bieten werden. Dieser Service besteht nicht nur in der fachlichen Dienstleistung sondern in hohem Maße auch in einer von Freundlichkeit geprägten zwischenmenschlichen Begegnung.
 
-
-		</br>
-		</br>
-		Unsere Leistungen umfassen:
 
 
 		</p>
+	</div>
+
+
+	<div class = "services">
+		<h2>Leistungen</h2>
+		<p>
+			
+			Unsere Leistungen beschränken sich auf unsere vier Kerngebiete: Topologische Datenanalyse (TDA), Natural Language Processing (NLP), Graph-Datenbanken und CQL (Categorical Query Language)
+
+		</p>
+		<li>NLP</li>
+		<li></li>
+		<li></li>
+		<li></li>
+
 	</div>
 
 </body>
